# simpleshop-rag

./: .env-example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: profile_lookup_agent.py
data/: client_profiles.json  product_catalog.json
mappers/: product_catalog_mapper.py  profile_mapper.py
tools/: vector_storage.py
