[project]
name = "simpleshop-rag"
version = "0.1.0"
description = "Chatbot para recomendación de productos con RAG y OpenAI"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "Iván López Hdez", email = "info@ivanlopezdev.es"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.17",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "openai>=1.79.0",
    "python-dotenv>=1.1.0",
    "faiss-cpu>=1.11.0",  # o faiss-gpu si se usa GPU
    "tiktoken>=0.9.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
